--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,6 @@ h2{
 .col-1{
     flex-basis: 80%;
     position: relative;
-    margin-left: 50px;
     background-color: #e2de84;
     padding: 2%;
     box-shadow: 10px 10px 10px;
@@ -93,9 +92,9 @@ h2{
 }
 
 .col-2 .fotovonmir{
-    width: 40%;
+    width: 50%;
     box-shadow: 10px 10px 10px;
-    transform: translateX(300px);
+    margin-left: 30%;
 }
 
 .socialmedia img{
@@ -109,6 +108,11 @@ h2{
 
 .socialmedia{
     text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    left: 0;
+    overflow: hidden;
 }
 
 .socialmedia a{
