--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ nav ul li{
 
 nav ul li a{
     color: black;
-    font-size: 14px;
+    font-size: 100%;
     padding: 5px;
     text-decoration: none;
     background-color: #e2de84;
@@ -102,7 +102,7 @@ h2{
     margin: 5px;
     cursor: pointer;
     background-color: #e2de84;
-    padding: 0.5%;
+    padding: 5px;
     box-shadow: 5px 5px 5px;
 }
 
@@ -130,7 +130,7 @@ h2{
 
 #aboutmelinks li a{
     color: black;
-    font-size: 14px;
+    font-size: 100%;
     padding: 5px;
     text-decoration: none;
     background-color: #e0d94c;
@@ -144,13 +144,13 @@ h2{
 
 #catpics img{
     width: 100%;
-    margin: 20px;
+    margin: 8px;
     box-shadow: 10px 10px 10px;
 }
 
 .technolist li{
     color: black;
-    font-size: 14px;
+    font-size: 100%;
     padding: 5px;
     margin: 10px;
     text-decoration: none;
@@ -160,6 +160,11 @@ h2{
 }
 
 @media only screen and (max-width:900px){
+
+    .container{
+        padding-left: 4%;
+        padding-right: 4%;
+    }
 
     nav ul {
         width: 100%;
@@ -210,5 +215,9 @@ h2{
 
     .col-1{
         flex-basis: 100%;
+    }
+
+    #aboutmelinks li{
+        margin: 5%;
     }
 }
