Added content to /aboutme/linux.html

--- a/css/style.css
+++ b/css/style.css
@@ -159,6 +159,11 @@ h2{
     list-style: none;
 }
 
+.neofetch{
+    width: 100%;
+    box-shadow: 10px 10px 10px;
+}
+
 @media only screen and (max-width:900px){
 
     .container{
