added source for xkcd commic

--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,13 @@ h2{
     margin-left: 30%;
 }
 
+.comic {
+    width: 125%;
+    box-shadow: 10px 10px 10px;
+    margin-left: 50%;
+    color: black;
+}
+
 .socialmedia img{
     height: 30px;
     margin: 5px;
