--- a/css/style.css
+++ b/css/style.css
@@ -7,25 +7,29 @@
 .container{
     width: 100%;
     min-height: 100vh;
-    padding-left: 8%;
-    padding-right: 8%;
     box-sizing: border-box;
     overflow: hidden;
     background: rgb(56,56,56);
     background: linear-gradient(117deg, rgba(56,56,56,1) 0%, rgba(130,130,130,1) 100%); 
 }
 
+.content {
+    padding-left: 8%;
+    padding-right: 8%;
+}
+
 .navbar {
     width: 100%;
     display: flex;
     align-items: center;
+    background-color: #e2de84;
+    box-shadow: 5px 5px 5px;
+    padding: 30px 0;
 }
 
 .logo {
     width: 180px;
-    margin: 30px 0;
-    background-color: #e2de84;
-    box-shadow: 5px 5px 5px;
+    margin-left: 8%;
 }
 
 .menu-icon{
@@ -34,12 +38,12 @@
     display: none;
     background-color: #e2de84;
     padding: 10px;
-    box-shadow: 5px 5px 5px;
 }
 
 nav{
     flex: 1;
     text-align: right;
+    padding-right: 8%;
 }
 
 nav ul li{
@@ -49,16 +53,24 @@ nav ul li{
 
 nav ul li a{
     color: black;
-    font-size: 100%;
-    padding: 5px;
+    font-size: 120%;
     text-decoration: none;
-    background-color: #e2de84;
-    box-shadow: 5px 5px 5px black;
+    padding-left: 20px;
+    font-style: italic; 
 }
 
 nav ul li a:hover{
     color: #ecfeaa;
     cursor: pointer;
+}
+
+.activeTab{
+    text-decoration-line: underline;
+    text-decoration-thickness: 3px;
+}
+
+#menuList{
+    margin-top: -1%;
 }
 
 h1{
@@ -173,15 +185,10 @@ h2{
 
 @media only screen and (max-width:900px){
 
-    .container{
-        padding-left: 4%;
-        padding-right: 4%;
-    }
-
     nav ul{
         width: 100%;
         position: absolute;
-        top: 75px;
+        top: 100px;
         right: 0;
         z-index: 2;
         background-color: #e2de84;
@@ -197,15 +204,21 @@ h2{
     nav ul li a{
         box-shadow: 0 0 0;  
         cursor: pointer;
+        margin-right: 10px;
     }
 
     .menu-icon{
         display: block;
+        margin-right: 4%;
     }
 
     #menuList{
         overflow: hidden;
         transition: 0.5s;
+    }
+
+    .logo{
+        margin-left: 4%;
     }
 
     .row{
