--- a/css/style.css
+++ b/css/style.css
@@ -181,6 +181,27 @@ h2{
     list-style: none;
 }
 
+table{
+    margin-left: 10%;
+    text-align: center;
+}
+
+table tr th{
+    color: black;
+    font-size: 100%;
+    padding: 5px;
+    background-color: #e0d94c;
+    box-shadow: 5px 5px 5px black;
+}
+
+table tr td{
+    color: black;
+    font-size: 100%;
+    padding: 5px;
+    background-color: #e2de84;
+    box-shadow: 5px 5px 5px black;
+}
+
 .neofetch{
     width: 100%;
     box-shadow: 10px 10px 10px;
@@ -248,6 +269,10 @@ h2{
     }
 
     #aboutmelinks li{
+        margin: 1%;
+    }
+
+    table{
         margin: 1%;
     }
 }
