Add catpic to frontpage

--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,13 @@ h2{
     margin-left: 30%;
 }
 
+.col-2 .catFront {
+    position: fixed;
+    width: 40%;
+    bottom: 0;
+    right: 0;
+}
+
 .comic {
     width: 125%;
     box-shadow: 10px 10px 10px;
@@ -282,6 +289,10 @@ table tr td{
         transform: translateX(0px);
     }
 
+    .col-2 .catFront {
+        width: 65%;
+    }
+
     .col-1{
         flex-basis: 100%;
     }
@@ -292,5 +303,17 @@ table tr td{
 
     table{
         margin: 1%;
+    }
+}
+
+@media only screen and (max-width:600px){
+    .col-2 .catFront {
+        width: 85%;
+    }
+}
+
+@media only screen and (max-width:500px){
+    .col-2 .catFront {
+        width: 100%;
     }
 }
