--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,55 @@ h2{
     color: black;
 }
 
+#popupButton {
+    color: black;
+    font-size: 100%;
+    padding: 5px;
+    text-decoration: none;
+    background-color: #e0d94c;
+    box-shadow: 5px 5px 5px black;
+}
+
+#popupButton:hover{
+    color: #ecfeaa;
+    cursor: pointer;
+}
+
+.Popup {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+}
+  
+.popupContent {
+    background-color: #e2de84;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #000000;
+    width: 80%;
+    color: black;
+}
+
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover, .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 .socialmedia img{
     height: 30px;
     margin: 5px;
