--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,10 @@ h2{
     color: #222222;
 }
 
+p{
+    color: #222222;
+}
+
 .row{
     display: flex;
     justify-content: space-between;
@@ -265,6 +269,11 @@ table tr td{
 .neofetch{
     width: 100%;
     box-shadow: 10px 10px 10px;
+    color:black;
+}
+
+#fullpic img{
+    width: 100%;
 }
 
 @media only screen and (max-width:900px){
