--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@
     display: flex;
     align-items: center;
     box-shadow: 5px 5px 5px;
-    padding: 40px 0;
+    padding: 30px 0;
     
     backdrop-filter: blur(10px) saturate(100%);
     -webkit-backdrop-filter: blur(10px) saturate(100%);
@@ -37,13 +37,13 @@
 }
 
 .logo {
-    width: 160px;
-
+    width: 190px;
+    margin-top: 5em;
     margin-left: 8%;
     position: absolute;
     backdrop-filter: blur(10px) saturate(100%);
     -webkit-backdrop-filter: blur(10px) saturate(100%);
-    border-radius: 20px;
+    border-radius: 15px;
 }
 
 .menu-icon{
@@ -415,6 +415,7 @@ table tr td{
 
     .col-1{
         flex-basis: 100%;
+        margin-top: 2em;
     }
 
     #aboutmelinks li{
