--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,34 @@
     padding-right: 8%;
 }
 
+#no-script{
+    backdrop-filter: blur(10px) saturate(100%);
+    -webkit-backdrop-filter: blur(10px) saturate(100%);
+    background-color: rgba(180, 0, 0, 0.5);
+    border: 1px solid rgba(255, 255, 255, 0.125);
+    text-align: center;
+    padding: 2em;
+}
+
+#no-script a{
+    color: #bbadbe;
+    font-size: 100%;
+    padding: 5px;
+    text-decoration: none;
+    box-shadow: 5px 5px 5px black;
+
+    backdrop-filter: blur(10px) saturate(100%);
+    -webkit-backdrop-filter: blur(10px) saturate(100%);
+    background-color: rgba(130, 0, 0, 0.5);
+    border-radius: 0 12px 0 12px;
+    border: 1px solid rgba(255, 255, 255, 0.125);
+}
+
+#no-script a:hover{
+    color: #af83b9;
+    cursor: pointer;
+}
+
 .navbar {
     z-index: 2;
     position: relative;
@@ -324,10 +352,12 @@ table tr td{
     width: 100%;
     box-shadow: 10px 10px 10px;
     color:black;
+    border-radius: 12px;
 }
 
 #fullpic img{
     width: 100%;
+    border-radius: 12px;
 }
 
 @media only screen and (max-width:900px){
