--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,14 @@ h2{
     color: #bbadbe;
 }
 
+h3{
+    color: #bbadbe;
+}
+
+h4{
+    color: #bbadbe;
+}
+
 p{
     color: #bbadbe;
     font-size: 100%;
